# hal_alif

./: CMakeLists.txt  linker_add_rom_symbols.ld
automation/: Jenkinsfile_Pr  ble_samples.groovy
ble/: CMakeLists.txt
ble/plf/: alif_ble.c  hci_uart.c  hci_uart.h  sync_timer.c  sync_timer.h
ble/v1_2/: CMakeLists.txt  rom_ble_stack.patch.elf
ble/v1_2/include/: rom_build_cfg.h  rwip_config.h
ble/v1_2/include/plf/ble/: ble_api.h
ble/zephyr/: Kconfig
common/include/: es0_power_manager.h  sau_tcm_ns_setup.h  tgu.h
common/src/: es0_power_manager.c  sau_tcm_ns_setup.c  system.c  tgu.c
common/zephyr/: Kconfig
drivers/: CMakeLists.txt
drivers/analog/include/: analog_ctrl.h
drivers/analog/src/: analog_ctrl.c
drivers/dave2d/: CMakeLists.txt
drivers/dave2d/src/: dave_base.c  dave_base_intern.h  dave_irq.c  dave_memory.c
drivers/dma_event_router/src/: dma_event_router.c
drivers/ethos_u/src/: ethosu_callback.c
drivers/isp/: CMakeLists.txt  Kconfig
drivers/jpeg/: CMakeLists.txt  Kconfig  README.md
drivers/jpeg/inc/: jpeg_hantro_vc9000e_sw.h
drivers/ospi/include/: ospi.h  ospi_hal.h
drivers/ospi/src/: ospi.c  ospi_hal.c
drivers/pm/rtss/: pm_rtss.c
drivers/usb/: CMakeLists.txt
drivers/usb/include/: usbd_dwc3.h
drivers/usb/src/: usbd_dwc3_bulk_transfer.c  usbd_dwc3_initialize.c  (+3 more)
ieee802154/src/: alif_ahi.c  alif_ahi.h  alif_mac154_api.c
lc3/: CMakeLists.txt
scripts/checkpatch/: typedefsfile
se_services/include/: aipm.h  services_lib_api.h  services_lib_ids.h  services_lib_protocol.h
se_services/zephyr/: Kconfig
zephyr/: Kconfig
(+35 files in other folders)
